[gd_scene load_steps=25 format=3 uid="uid://bdgxbchnxbixg"]

[ext_resource type="Texture2D" uid="uid://bcmum6s6s8kbu" path="res://assets/Gorthulon/Gorth attacks.png" id="1_jkkoo"]
[ext_resource type="Script" path="res://scripts/gorthulon/gorthulon.gd" id="1_xxsun"]
[ext_resource type="PackedScene" uid="uid://b6ws03lwfd0te" path="res://scenes/components/health_component.tscn" id="2_b8wds"]
[ext_resource type="Texture2D" uid="uid://dgllejti275fk" path="res://scenes/gorthulon/hand fore.png" id="2_ub28h"]
[ext_resource type="Script" path="res://scripts/gorthulon/finite_state_machine.gd" id="3_wtuh3"]
[ext_resource type="Script" path="res://scripts/gorthulon/Idle.gd" id="4_7qdwg"]
[ext_resource type="Script" path="res://scripts/gorthulon/LeftSweep.gd" id="5_a8o1j"]
[ext_resource type="Script" path="res://scripts/gorthulon/RightSweep.gd" id="7_nowpy"]
[ext_resource type="Script" path="res://scripts/gorthulon/Tongue.gd" id="8_alq3x"]
[ext_resource type="PackedScene" uid="uid://dcnert7t4q4vt" path="res://scenes/you_won.tscn" id="10_gnn51"]
[ext_resource type="Texture2D" uid="uid://bjfug6rkbpwc5" path="res://assets/boss hp/bossHPprunder.png" id="10_hilfe"]
[ext_resource type="Script" path="res://scripts/gorthulon/BossHP.gd" id="10_jrmaa"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_pv1hu"]
light_mode = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_val7k"]
size = Vector2(195, 58)

[sub_resource type="Animation" id="Animation_jkt81"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D/AttackHitbox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [33, 33, 33, 34, 35, 36, 36, 35]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Hands:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Hands:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 0, 0, 0, 0, 0, 0]
}

[sub_resource type="Animation" id="Animation_kdsrg"]
length = 2.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D/AttackHitbox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.6, 1.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D/AttackHitbox:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.6, 1.7, 1.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(263.5, 67), Vector2(387.75, 67), Vector2(387.75, 67)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area2D/AttackHitbox:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.6),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Area2D/AttackHitbox:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.6, 1.7, 1.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-89.25, 57.5), Vector2(130.125, 59), Vector2(130.125, 59)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = false
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 11, 11, 11, 12, 13, 14, 15, 16, 16, 16, 16]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Hands:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = false
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../Hands:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = false
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 2, 3, 4, 0, 0, 0, 0]
}

[sub_resource type="Animation" id="Animation_taajv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D/AttackHitbox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D/AttackHitbox:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(195, 58)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area2D/AttackHitbox:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Area2D/AttackHitbox:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-58.25, 57.5)]
}

[sub_resource type="Animation" id="Animation_ls8qj"]
length = 2.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D/AttackHitbox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.6, 1.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D/AttackHitbox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.6, 1.7, 1.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(80.137, 57.8856), Vector2(-112.072, 57.8856), Vector2(-103.715, 57.8856)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area2D/AttackHitbox:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.6, 1.7, 1.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(295.437, 67), Vector2(375.855, 67), Vector2(372.359, 67)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 17, 18, 19, 19, 20, 21, 22, 22, 23, 24, 24, 24, 24, 25, 26, 27, 28, 29, 30, 31, 32]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Hands:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = false
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Hands:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = false
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 5, 6, 7, 8, 0, 0, 0, 0]
}

[sub_resource type="Animation" id="Animation_rpdrf"]
length = 2.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D/AttackHitbox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.45),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D/AttackHitbox:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(95, 67), Vector2(144, 67), Vector2(156.161, 67), Vector2(154.123, 67)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area2D/AttackHitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(8.5, 57.8856), Vector2(10, 57.8856), Vector2(3.08065, 57.8856), Vector2(3.26129, 57.8856)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.1, 1.25, 1.35, 1.45, 1.55, 1.65, 1.75, 1.85, 1.95, 2.05, 2.15),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [33, 33, 33, 34, 35, 37, 38, 39, 40, 41, 42, 43, 44, 44, 45, 45, 44, 46, 46, 46, 47, 48, 49, 50, 51, 52, 53, 35, 34, 54, 54, 34]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Hands:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = false
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Hands:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = false
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p6qca"]
_data = {
"Idle 1x": SubResource("Animation_jkt81"),
"Left sweep": SubResource("Animation_kdsrg"),
"RESET": SubResource("Animation_taajv"),
"Right sweep": SubResource("Animation_ls8qj"),
"Tongue": SubResource("Animation_rpdrf")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_o5ioh"]
radius = 78.0256

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s5crr"]
size = Vector2(445, 246)

[sub_resource type="Shader" id="Shader_2skwt"]
code = "shader_type canvas_item;

#define iResolution 1.0/SCREEN_PIXEL_SIZE
#define iTime TIME
#define fragColor COLOR

uniform vec4 bg_color: source_color;
uniform float uv_scale : hint_range(0.0, 10.0, 0.1) = 1.0;
uniform float percentage: hint_range(0.0, 1.0) = 1.0;
uniform float speed = 1.0;

uniform float wave_1_speed = -1.0;
uniform float wave_2_speed = 1.0;

uniform float wave_1_freq = 1.2;
uniform float wave_2_freq = 1.0;

uniform float wave_1_amp = 0.015;
uniform float wave_2_amp = 0.01;

uniform vec3 sun_dir = vec3(-0.2, 0.4, 1.0);
uniform vec4 water_colour : source_color = vec4(0.2, 0.4, 0.6, 1.0);
uniform vec4 foam_colour : source_color = vec4(0.8, 0.9, 1.0, 1.0);
uniform vec4 sky_colour : source_color = vec4(0.2, 0.6, 0.8, 1.0);
uniform vec4 specular_colour : source_color = vec4(1.0, 1.0, 1.0, 1.0);

vec2 hash( vec2 p ) // replace this by something better
{
    p = vec2( dot(p,vec2(127.1,311.7)), dot(p,vec2(269.5,183.3)) );
    return -1.0 + 2.0*fract(sin(p)*43758.5453123);
}

vec4 wave( vec2 uv, vec4 wave_color, float level, float freq, float amp, float sin_shift, float speed1 ){
	float sinus = sin( (uv.x + sin_shift + TIME * speed1) * freq) * amp;
	float shifted_level = ( 1.0 + 2.0 * amp ) * level - amp; //shift to completely hide or fill
	float treshold = step( 1.0 - sinus - shifted_level, uv.y);
	return wave_color * treshold;
}

float noise( in vec2 p )
{
    const float K1 = 0.366025404; // (sqrt(3)-1)/2;
    const float K2 = 0.211324865; // (3-sqrt(3))/6;

    vec2  i = floor( p + (p.x+p.y)*K1 );
    vec2  a = p - i + (i.x+i.y)*K2;
    float m = step(a.y,a.x); 
    vec2  o = vec2(m,1.0-m);
    vec2  b = a - o + K2;
    vec2  c = a - 1.0 + 2.0*K2;
    vec3  h = max( 0.5-vec3(dot(a,a), dot(b,b), dot(c,c) ), 0.0 );
    vec3  n = h*h*h*h*vec3( dot(a,hash(i+0.0)), dot(b,hash(i+o)), dot(c,hash(i+1.0)));
    return dot( n, vec3(70.0) );
}

#define MAX_WAVES 4
#define SUPERPOSITION 4
#define TAU 6.28318
#define PHI 1.618

// closed form normal would increase performance a lot
float height(vec2 p, float t) {
    float acc = 0.0;
    for (int i = 0; i < MAX_WAVES; i++) {
    for (int j = 0; j < SUPERPOSITION; j++) {
        int seed = i + 5*j;
        //float theta = TAU * noise(vec2(0.01 * t, 10.0*float(i)));
        float theta = TAU * PHI * 10.0*float(seed);
        float up = cos(theta) * p.x - sin(theta) * p.y;
        float vp = sin(theta) * p.x + cos(theta) * p.y;
        //float initial_phase = TAU * noise(vec2(0.0, 2.0*float(i))) + cos(vp);
        float initial_phase = TAU * PHI * float(seed);
        //float k = pow(2.0, float(i)*0.1) + 0.5;
        //float k = pow(2.0, 1.0 + 0.4*float(i));
        float k = pow(2.0, float(i));
        //float k = float(i+1);
        float phase = initial_phase + up*k + cos(vp) + 3.0*t + 0.5*k*t;
        // its kinda like choose your artifacts, probably use noise for vp
        float A = cos(phase)/(k*k);
        acc += A;
    }}
    return acc;
}
vec4 hn_fdm(vec2 p, float t) {
  float h = height(p, t);
  vec2 vx = vec2(0.1, 0.0);
  vec2 vy = vec2(0.0, 0.1);
  float hx = height(p+vx, t);
  float hy = height(p+vy, t);
  float dx = (hx - h);
  float dy = (hy - h);
  // vec3 norm = normalize(vec3(-dx, -dy, dx+dy));
  // vec3 norm = normalize(vec3(-dx/vx.x, -dy/vy.y, 1.0));

  vec3 v1 = normalize(vec3(vx.x, 0.0, dx));
  vec3 v2 = normalize(vec3(0.0, vy.y, dy));
  vec3 norm = cross(v1, v2);

  return vec4(norm, h);
}

void fragment()
{
    vec2 uv = UV;
    vec2 uv_screen = (uv - 0.5) * uv_scale;

    vec4 nh = hn_fdm(uv_screen* 10.0, iTime * speed);
    float h = nh.w;
    vec3 norm = nh.xyz;
    
    if (dot(sun_dir, norm) > 0.98) {
        fragColor = specular_colour;
    } else {
        fragColor = mix(water_colour, sky_colour, dot(norm, normalize(vec3(0.0, 0.2, 1.0))));
    }
	vec2 uv2 = vec2(UV.y, 1.0-UV.x);
	vec4 shadowWaveColor = fragColor * 0.6;
	shadowWaveColor.a = 1.0;
	vec4 wave1 = wave(uv2, shadowWaveColor, percentage, wave_1_freq, wave_1_amp, 0.0, wave_1_speed);
	vec4 wave2 = wave(uv2, fragColor, percentage, wave_2_freq, wave_2_amp, 0.7785*TIME, wave_2_speed);
	vec4 combined_waves = mix(wave1, wave2, wave2.a);
	COLOR = mix( bg_color, combined_waves, combined_waves.a );
	//fragColor.a = step(UV.x, percentage);
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bxmjl"]
shader = SubResource("Shader_2skwt")
shader_parameter/bg_color = Color(0.34902, 0.027451, 0.027451, 0)
shader_parameter/uv_scale = 0.0
shader_parameter/percentage = 1.0
shader_parameter/speed = 0.1
shader_parameter/wave_1_speed = -1.0
shader_parameter/wave_2_speed = 1.0
shader_parameter/wave_1_freq = 1.225
shader_parameter/wave_2_freq = 1.0
shader_parameter/wave_1_amp = 0.015
shader_parameter/wave_2_amp = 0.01
shader_parameter/sun_dir = Vector3(-0.2, 0.4, 1)
shader_parameter/water_colour = Color(0.34902, 0.027451, 0.027451, 1)
shader_parameter/foam_colour = Color(0.34902, 0.027451, 0.027451, 1)
shader_parameter/sky_colour = Color(0.34902, 0.027451, 0.027451, 1)
shader_parameter/specular_colour = Color(0.34902, 0.027451, 0.027451, 1)

[node name="Gorthulon" type="CharacterBody2D" groups=["boss", "enemies"]]
z_index = -1
collision_layer = 2
collision_mask = 2
platform_on_leave = 2
script = ExtResource("1_xxsun")

[node name="HealthComponent" parent="." instance=ExtResource("2_b8wds")]
max_health = 750

[node name="Hands" type="Sprite2D" parent="."]
z_index = 15
texture_filter = 1
material = SubResource("CanvasItemMaterial_pv1hu")
texture = ExtResource("2_ub28h")
hframes = 3
vframes = 3
metadata/_aseprite_wizard_config_ = {
"i_mode": -1,
"keep_anim_length": false,
"layer": "hand fore",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "AnimationPlayer",
"slice": "",
"source": "res://assets/Gorthulon/Gorth attacks.aseprite"
}
metadata/_aseprite_wizard_interface_config_ = {
"layer_section": true
}
metadata/_aseprite_wizard_source_file_hash_ = "55090f2840041ff19230670d93ad7c17"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("CanvasItemMaterial_pv1hu")
texture = ExtResource("1_jkkoo")
hframes = 8
vframes = 7
frame = 35
metadata/_aseprite_wizard_config_ = {
"i_mode": -1,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "res://assets/Gorthulon",
"o_name": "",
"only_visible": false,
"player": "AnimationPlayer",
"slice": "",
"source": "res://assets/Gorthulon/Gorth attacks.aseprite"
}
metadata/_aseprite_wizard_interface_config_ = {
"animation_section": true,
"layer_section": true,
"output_section": true,
"slice_section": true
}
metadata/_aseprite_wizard_source_file_hash_ = "55090f2840041ff19230670d93ad7c17"

[node name="Area2D" type="Area2D" parent="Sprite2D"]
position = Vector2(1, 40)

[node name="AttackHitbox" type="CollisionShape2D" parent="Sprite2D/Area2D"]
position = Vector2(-58.25, 57.5)
shape = SubResource("RectangleShape2D_val7k")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_p6qca")
}
autoplay = "Idle 1x"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5, 41)
shape = SubResource("CircleShape2D_o5ioh")

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
visible = false
position = Vector2(6.5, 16)
shape = SubResource("RectangleShape2D_s5crr")

[node name="FiniteStateMachine" type="Node2D" parent="."]
script = ExtResource("3_wtuh3")

[node name="Idle" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("4_7qdwg")

[node name="LeftSweep" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("5_a8o1j")

[node name="RightSweep" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("7_nowpy")

[node name="Tongue" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("8_alq3x")

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="BossHP" type="CanvasLayer" parent="."]
layer = 5
script = ExtResource("10_jrmaa")

[node name="Label" type="Label" parent="BossHP"]
offset_left = 204.0
offset_top = 295.0
offset_right = 436.0
offset_bottom = 311.0
theme_override_font_sizes/font_size = 8
text = "Gorthulon, the Spellmaw Beast"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureProgressBar" type="TextureProgressBar" parent="BossHP"]
offset_left = 192.0
offset_top = 312.0
offset_right = 320.0
offset_bottom = 352.0
scale = Vector2(2, 1)
texture_over = ExtResource("10_hilfe")

[node name="Healthbar" type="ProgressBar" parent="BossHP"]
material = SubResource("ShaderMaterial_bxmjl")
offset_left = 194.0
offset_top = 314.0
offset_right = 446.0
offset_bottom = 342.0
show_percentage = false

[node name="You won" parent="." instance=ExtResource("10_gnn51")]

[node name="CanvasLayer" parent="You won" index="0"]
layer = 10
visible = false

[connection signal="body_entered" from="Sprite2D/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="FiniteStateMachine/LeftSweep" method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="FiniteStateMachine/RightSweep" method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="FiniteStateMachine/Tongue" method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="PlayerDetection" to="FiniteStateMachine/Idle" method="_on_player_detection_body_entered"]
[connection signal="timeout" from="AttackCooldown" to="FiniteStateMachine/Idle" method="_on_attack_cooldown_timeout"]

[editable path="You won"]
